[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Art/BackGround/m_background.tres" type="Material" id=2]
[ext_resource path="res://Prefabs/Planet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/BoneGolem.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/TotemBoneGolem.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Simbad.tscn" type="PackedScene" id=7]
[ext_resource path="res://Prefabs/TotemSimbad.tscn" type="PackedScene" id=8]
[ext_resource path="res://Prefabs/enem_Simbad.tscn" type="PackedScene" id=9]
[ext_resource path="res://Prefabs/enem_TotemSimbad.tscn" type="PackedScene" id=10]
[ext_resource path="res://Prefabs/enem_Robot.tscn" type="PackedScene" id=11]
[ext_resource path="res://Prefabs/enem_TotemRobot.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/MoveManager.gd" type="Script" id=13]
[ext_resource path="res://Scripts/TurnManager.gd" type="Script" id=14]
[ext_resource path="res://Prefabs/HUD.tscn" type="PackedScene" id=15]

[sub_resource type="PlaneMesh" id=1]

[node name="MainGame" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, 0.353553, -0.612373, 0, 0.866026, 0.5, 0.707107, -0.353553, 0.612373, -20.111, 17.0872, 20 )
projection = 1
size = 10.9092

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.353553, -0.612373, 0, 0.866026, 0.499999, 0.707107, -0.353553, 0.612373, -20.11, 17.0872, 20 )
light_color = Color( 0.992157, 0.901961, 0.498039, 1 )
light_indirect_energy = 0.0

[node name="BackGround" type="MeshInstance" parent="."]
transform = Transform( 25.4558, -0.353553, -12.2474, 0, 0.866025, -10, 25.4558, 0.353553, 12.2474, 0, -7.85212, -5.82792 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="Planet" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 6.41887, -4.55615, 1.69276 )

[node name="Table" parent="." instance=ExtResource( 4 )]
transform = Transform( -3.21042e-008, 0, 0.734459, 0, 0.734459, 0, -0.734459, 0, -3.21042e-008, -4.69687, 0.107064, 3.01806 )

[node name="BoneGolem" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.60522e-008, 0, 0.36723, 0, 0.36723, 0, -0.36723, 0, -1.60522e-008, -4.06209, 1.28587, 1.29117 )

[node name="TotemBoneGolem" parent="." instance=ExtResource( 6 )]
transform = Transform( -2.00651e-008, 0, 0.459037, 0, 0.459037, 0, -0.459037, 0, -2.00651e-008, -5.25322, 2.48671, 1.31591 )

[node name="Simbad" parent="." instance=ExtResource( 7 )]
transform = Transform( -1.60522e-008, 0, 0.36723, 0, 0.36723, 0, -0.36723, 0, -1.60522e-008, -4.07089, 1.28587, -1.05242 )

[node name="TotemSimbad" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.00651e-008, 0, 0.459037, 0, 0.459037, 0, -0.459037, 0, -2.00651e-008, -5.25349, 2.48637, -1.04109 )

[node name="EnemySimbad" parent="." instance=ExtResource( 9 )]
transform = Transform( -1.60521e-008, 0, -0.36723, 0, 0.36723, 0, 0.36723, 0, -1.60521e-008, 4.16837, 1.28587, 1.30309 )

[node name="EnemyTotemSimbad" parent="." instance=ExtResource( 10 )]
transform = Transform( -2.00651e-008, 0, -0.459037, 0, 0.459037, 0, 0.459037, 0, -2.00651e-008, 5.33533, 2.50662, 1.32156 )

[node name="EnemyRobot" parent="." instance=ExtResource( 11 )]
transform = Transform( -1.60521e-008, 0, -0.36723, 0, 0.36723, 0, 0.36723, 0, -1.60521e-008, 4.1662, 1.27698, -1.05957 )

[node name="EnemyTotemRobot" parent="." instance=ExtResource( 12 )]
transform = Transform( -2.00651e-008, 0, -0.459037, 0, 0.459037, 0, 0.459037, 0, -2.00651e-008, 5.34304, 2.50215, -1.03493 )

[node name="MoveManager" type="Spatial" parent="."]
script = ExtResource( 13 )

[node name="MovementGemOrigin" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.994, 12.781, 13.356 )

[node name="SkillGemOrigin" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.99, 11.581, 13.356 )

[node name="TurnManager" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="TurnManager"]
wait_time = 6.0

[node name="HUD" parent="." instance=ExtResource( 15 )]

[connection signal="timeout" from="TurnManager/Timer" to="TurnManager" method="_on_Timer_timeout"]
